# k

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build-uboot.sh  build.ninja  build.sh  debug.gdb  link.ld  make-image.sh  notes  qemu-debug.sh  qemu-run.sh  qemu-test.sh
.cargo/: config  config.toml
.github/workflows/: check-pr.yaml
api_tests/: Cargo.toml
api_tests/src/: files.rs  main.rs  processes.rs  queues.rs  threads.rs
chashmap/: Cargo.toml  README.md
chashmap/src/: lib.rs  tests.rs
init/: Cargo.toml
init/src/: channel.rs  main.rs
kapi/: Cargo.toml
kapi/src/: commands.rs  completions.rs  lib.rs  queue.rs  system_calls.rs
kernel/: Cargo.toml  build.rs  link.ld
kernel/.cargo/: config
kernel/src/: dtb.rs  error.rs  init.rs  intrinsics.rs  io.rs  lib.rs  lists.rs  main.rs  maps.rs  start.S  timer.rs  uart.rs
kernel/src/bus/: mod.rs
kernel/src/bus/pcie/: mod.rs  msix.rs
kernel/src/ds/: dtb.rs  lists.rs  maps.rs  mod.rs
kernel/src/exception/: gic.rs  handlers.rs  mod.rs  table.S
kernel/src/exception/gic/: its.rs  mod.rs  v2m.rs
kernel/src/fs/: mod.rs
kernel/src/fs/fat/: data.rs  mod.rs
kernel/src/memory/: heap.rs  mod.rs  paging.rs  physical_buffer.rs  physical_memory_allocator.rs  virtual_address_allocator.rs
kernel/src/platform/: intrinsics.rs  mod.rs  psci.rs  start.S  timer.rs  uart.rs
kernel/src/process/: channel.rs  commands.rs  dispatch_cmd.rs  mod.rs  owned_queue.rs  queue.rs  reg.rs  resource.rs  scheduler.rs  spawn.rs
kernel/src/process/interface/: channel.rs  dispatch_cmd.rs  mod.rs  owned_queue.rs  resource.rs
kernel/src/process/thread/: mod.rs  reg.rs  scheduler.rs
kernel/src/registry/: mod.rs  path.rs
kernel/src/storage/: block_cache.rs  mod.rs
kernel/src/storage/nvme/: block_store.rs  command.rs  interrupt.rs  mod.rs  queue.rs
kernel/src/tasks/: locks.rs  mod.rs
kernel/tests/: heap.rs  nvme.rs  trivial.rs  v2m.rs
owning-ref-rs/: Cargo.toml  README.md
owning-ref-rs/src/: lib.rs
ref/: REF.md
scripts/: qemu-exec.sh  qemu-test.sh
src/: test.c
