[package]
name = "chashmap"
version = "3.0.0"
authors = ["ticki <Ticki@users.noreply.github.com>"]
description = "Fast, concurrent hash maps with extensive API."
repository = "https://gitlab.redox-os.org/redox-os/chashmap"
documentation = "https://docs.rs/chashmap"
license = "MIT"
keywords = ["hashmap", "concurrent", "parking_lot", "lock", "map"]
exclude = ["target", "Cargo.lock"]
edition = "2021"

[dependencies]
owning_ref = { path = "../owning-ref-rs" }
lock_api = "0.4"
