[package]
name = "kapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
snafu = { version = "0.8", default-features = false, features = ["unstable-core-error", "rust_1_65"] }
bytemuck = "1"
