[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
bitfield = "0.14"
async-trait = "0.1"

hashbrown = "0.13"
smallvec = "1"
byteorder = { version = "1", default-features = false }
bitvec = { version = "1", default-features = false }

spin = "0.9"
lock_api = "0.4"
crossbeam = { version = "0.8", features = ["alloc"], default-features = false }
chashmap = { path = "../chashmap" }

log = "0.4"

qemu-exit = "3.0.1"

[dev-dependencies]
paste = "1"
