[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# macros
derive_more = "0.99"
bitfield = "0.14"
bitflags = { version = "2", features = ["bytemuck"] }
async-trait = "0.1"
async-recursion = "1"

# extra data structures
hashbrown = "0.14"
smallvec = "1"
byteorder = { version = "1", default-features = false }
bitvec = { version = "1", default-features = false }
bytemuck = { version = "1", features = ["derive"] }
widestring = { version = "1", default-features = false, features = ["alloc"] }

# logging / errors
log = "0.4"
snafu = { version = "0.7", default-features = false, features = ["unstable-core-error", "rust_1_61"] }

# concurrency
spin = "0.9"
lock_api = "0.4"
crossbeam = { version = "0.8", features = ["alloc"], default-features = false }
futures = { version = "0.3", features = ["alloc"], default-features = false }
chashmap = { path = "../chashmap" }

# hardware interface
qemu-exit = "3.0.1"

# software interface
kapi = { path = "../kapi" }
elf = { version = "0.7.2", default-features = false }
postcard = { version = "1", features = ["experimental-derive"] }

[dev-dependencies]
paste = "1"
